--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "wanted-pre-onboarding",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "typescript": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +36,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/inthree3/wanted-pre-onboarding-frontend.git"
+  },
+  "author": "inseon-hwang",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/inthree3/wanted-pre-onboarding-frontend/issues"
+  },
+  "homepage": "https://github.com/inthree3/wanted-pre-onboarding-frontend#readme",
+  "devDependencies": {
+    "ts-node": "^10.9.1"
   }
 }
