--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
   },
   "homepage": "https://github.com/inthree3/wanted-pre-onboarding-frontend#readme",
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "ts-node": "^10.9.1"
   }
 }
